# CMakeTest

./: .buildinfo  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CMakeTest.cmake  README.md  README.rst  about.html  faqs.html  genindex.html  index.html  installation.html  main.cmake  main.sh  objects.inv  py-modindex.html  search.html  searchindex.js
.github/: .licenserc.yaml
.github/workflows/: assign_author.yml  autodocs.yml  ci.yml  deploy_docs.yml  test_documentation.yml  unit_test.yml
_sources/: about.rst.txt  faqs.rst.txt  installation.rst.txt
_sources/developer/: add_dir.rst.txt  add_section.rst.txt  add_test.rst.txt  colors.rst.txt  exec_tests.rst.txt  execution_unit.rst.txt  expectfail_subprocess.rst.txt  index.rst.txt  overrides.rst.txt  register_exception_handler.rst.txt  set_print_length.rst.txt
_sources/developer/asserts/: asserts.rst.txt  defined.rst.txt  equal.rst.txt  file_contains.rst.txt  file_exists.rst.txt  index.rst.txt  library_exists.rst.txt  list.rst.txt  prints.rst.txt  string.rst.txt  target_exists.rst.txt  target_has_property.rst.txt  true_false.rst.txt
_sources/developer/cmake_test/: add_dir.rst.txt  add_section.rst.txt  add_test.rst.txt  cmake_test.rst.txt  colors.rst.txt  exec_tests.rst.txt  execution_unit.rst.txt  expectfail_subprocess.rst.txt  index.rst.txt  overrides.rst.txt  register_exception_handler.rst.txt  set_print_length.rst.txt
_sources/developer/detail_/: index.rst.txt
_sources/tutorials/: 1_hello_world.rst.txt  2_sections.rst.txt
_sources/writing_tests/: errors.rst.txt  index.rst.txt  sections.rst.txt
cmake/: get_cmaize.cmake  get_cmakepp_lang.cmake  get_cminx.cmake  get_cpp.cmake  versions.cmake
cmake/cmake_test/: README.md  add_dir.cmake  add_section.cmake  add_test.cmake  cmake_test.cmake  colors.cmake  exec_tests.cmake  execution_unit.cmake  expectfail_subprocess.cmake  overrides.cmake  register_exception_handler.cmake
cmake/cmake_test/asserts/: README.md  asserts.cmake  defined.cmake  equal.cmake  file_contains.cmake  file_exists.cmake  library_exists.cmake  list.cmake  prints.cmake  (+5 more)
cmake_test/: CMakeLists.txt.in  README.md  add_dir.cmake  add_section.cmake  add_test.cmake  assert_prints.cmake  cmake_test.cmake  colors.cmake  end_test.cmake  exec_section.cmake  exec_sections.cmake  exec_subsections.cmake  exec_tests.cmake  execution_unit.cmake  expectfail_subprocess.cmake  overrides.cmake  register_exception_handler.cmake  set_print_length.cmake  template_expectfail.txt  template_lists.txt
cmake_test/asserts/: README.md  asserts.cmake  defined.cmake  equal.cmake  file_contains.cmake  file_exists.cmake  library_exists.cmake  list.cmake  prints.cmake  string.cmake  target_exists.cmake  target_has_property.cmake  true_false.cmake
cmake_test/detail_/: README.md  add_assert.cmake  add_test.cmake  buffers.cmake  debug.cmake  parse_assert.cmake  parse_common.cmake  parse_dispatch.cmake  parse_section.cmake  parse_test.cmake  print_status.cmake  run_unit_test.cmake  should_pass.cmake  test_state.cmake  utilities.cmake  write_and_run_contents.cmake
cmake_test/templates/: expectfail.txt  lists.txt  template_lists.txt
developer/: add_dir.html  add_section.html  add_test.html  architecture.html  cmake_test.html  colors.html  exec_tests.html  execution_unit.html  expectfail_subprocess.html  index.html  overrides.html  register_exception_handler.html  set_print_length.html  templates.html
developer/asserts/: asserts.html  defined.html  equal.html  file_contains.html  file_exists.html  index.html  library_exists.html  list.html  prints.html  string.html  target_exists.html  target_has_property.html  true_false.html
developer/cmake_test/: add_dir.html  add_section.html  add_test.html  cmake_test.html  colors.html  exec_tests.html  execution_unit.html  expectfail_subprocess.html  index.html  overrides.html  register_exception_handler.html  set_print_length.html
developer/detail_/: index.html
developer/templates/: index.html
docs/: Makefile  make_docs.py  requirements.txt
docs/source/: Doxyfile  about.rst  cmake_doxygen_filter.py  conf.py  config.yml  faqs.rst  index.rst  installation.rst
examples/: CMakeTest.cmake
test_directory_2/: README.md
tests/: CMakeLists.txt  add_section.cmake  basic_example_test.cmake  basic_section.cmake  hello_world.cmake  template_lists.txt  test_state.cmake
tests/add_dir_test/: CMakeLists.txt
tests/add_dir_test/forward_languages/: test_forward_language.cmake
tests/add_dir_test/no_language_set/: test_no_language_set.cmake
tests/add_dir_test/set_languages/: test_set_languages.cmake
tests/asserts/: CMakeLists.txt  defined.cmake  equal.cmake  file_contains.cmake  file_exists.cmake  library_exists.cmake  list.cmake  string.cmake  target_exists.cmake  target_has_property.cmake  true_false.cmake
tests/cmake_test/: add_section.cmake  add_test.cmake  basic_section.cmake  debug_mode.cmake  expectfail.cmake  test_same_name_diff_directory.cmake
tests/cmake_test/asserts/: defined.cmake  equal.cmake  file_exists.cmake  library_exists.cmake  regex_equal.cmake  target_exists.cmake  target_has_property.cmake
tests/cmake_test/detail_/utilities/: input_check.cmake
tests/cmake_test/tutorials/: 1_hello_world.cmake  2_sections.cmake
tests/detail_/: CMakeLists.txt
tests/detail_/parsing/: CMakeLists.txt  comment_dispatch.cmake  empty_dispatch.cmake
tests/detail_/test_section/: CMakeLists.txt  add_content.cmake  add_section.cmake  ctor.cmake  depth.cmake  end_section.cmake  get_content.cmake  make_flags.cmake  must_print.cmake  post_test_asserts.cmake  private.cmake  should_fail.cmake  should_pass.cmake  test_prefix.cmake  test_section.cmake  title.cmake
tests/detail_/utilities/: CMakeLists.txt  input_check.cmake  lc_find.cmake  print_result.cmake  repeat_string.cmake  return.cmake  sanitize_name.cmake
tests/test_directory_2/: README.md
tests/tutorials/: 1_hello_world.cmake  2_sections.cmake  CMakeLists.txt
tutorials/: 1_hello_world.html  2_sections.html  index.html
writing_tests/: assertions.html  basic_test.html  errors.html  index.html  sections.html
(+140 files in other folders)
